<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.0.0</version>
  <description>Launch into gazebo/rviz2 the kuka, oct, maps and suture-tool</description>
  <maintainer email="john.d.cast@gmail.com">John Dallas Cast</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>oct_gazebo</depend>
  <depend>kuka_gazebo</depend>
  <depend>suture_tool_gazebo</depend>
  <depend>maps_gazebo</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
